--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
 	id 'java'
 	id 'jacoco'
 	id 'checkstyle'
+	id "org.sonarqube" version "3.3"
 }
 
 group = 'com.adamfrance'
@@ -31,4 +32,9 @@ jacocoTestCoverageVerification {
                }
           }
      }
+}
+sonarqube {
+  properties {
+    property "sonar.projectKey", "jenkins"
+  }
 }
